--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-redux": "^4.0.0",
-    "redux": "^3.0.0"
+    "redux": "^3.0.0",
+    "redux-simple-router": "0.0.10",
+    "redux-thunk": "^1.0.0"
   },
   "devDependencies": {
     "babel-core": "^5.6.18",
