--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-redux": "^4.0.0",
     "redux": "^3.0.0",
     "history": "^1.13.1",
-    "react-router": "^1.0.0",
+    "react-router": "1.0.3",
     "redux-simple-router": "0.0.10",
     "redux-logger": "^2.0.3",
     "redux-thunk": "^1.0.0"
