--- a/package.json
+++ b/package.json
@@ -36,37 +36,37 @@
     "redux-thunk": "^1.0.0"
   },
   "devDependencies": {
+    "autoprefixer-loader": "^3.1.0",
     "babel-core": "^5.6.18",
+    "babel-eslint": "^3.1.14",
     "babel-loader": "^5.1.4",
     "babel-plugin-react-transform": "^1.1.0",
-    "expect": "^1.8.0",
-    "express": "^4.13.3",
-    "jsdom": "^5.6.1",
-    "mocha": "^2.2.5",
-    "node-libs-browser": "^0.5.2",
-    "raw-loader": "^0.5.1",
-    "react-addons-test-utils": "^0.14.0",
-    "react-transform-hmr": "^1.0.0",
-    "style-loader": "^0.12.3",
-    "todomvc-app-css": "^2.0.1",
-    "webpack": "^1.9.11",
-    "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.2.0",
-    "react-helmet": "2.1.1",
-    "isomorphic-fetch": "^2.2.0",
-    "rimraf": "^2.4.4",
-    "autoprefixer-loader": "^3.1.0",
-    "extract-text-webpack-plugin": "^0.8.1",
     "css-loader": "^0.23.0",
-    "file-loader": "^0.8.4",
-    "node-sass": "^3.4.2",
-    "sass-loader": "^3.1.2",
-    "style-loader": "^0.13.0",
-    "json-loader": "^0.5.3",
-    "url-loader": "^0.5.6",
-    "babel-eslint": "^3.1.14",
     "eslint": "^0.22.1",
     "eslint-loader": "^0.12.0",
-    "eslint-plugin-react": "^2.7.1"
+    "eslint-plugin-react": "^2.7.1",
+    "expect": "^1.8.0",
+    "express": "^4.13.3",
+    "extract-text-webpack-plugin": "^0.8.1",
+    "file-loader": "^0.8.4",
+    "isomorphic-fetch": "^2.2.0",
+    "jsdom": "^5.6.1",
+    "json-loader": "^0.5.3",
+    "mocha": "^2.2.5",
+    "node-libs-browser": "^0.5.2",
+    "node-sass": "^3.4.2",
+    "raw-loader": "^0.5.1",
+    "react-addons-test-utils": "^0.14.0",
+    "react-helmet": "2.1.1",
+    "react-transform-hmr": "^1.0.0",
+    "resolve-url-loader": "^1.4.3",
+    "rimraf": "^2.4.4",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
+    "todomvc-app-css": "^2.0.1",
+    "url-loader": "^0.5.6",
+    "webpack": "^1.9.11",
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-hot-middleware": "^2.2.0"
   }
 }
