--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "clean": "rimraf dist",
     "start": "NODE_ENV=production node ./webpack/server.prod.js",
     "dev": "NODE_ENV=development node ./webpack/server.dev.js",
+    "devdbg": "NODE_ENV=development node --debug ./webpack/server.dev.js",
     "build:webpack": "NODE_ENV=production webpack --progress --colors --config ./webpack/webpack.config.prod.js",
     "build": "npm run clean && npm run build:webpack",
     "test": "NODE_ENV=test mocha --recursive --compilers js:babel-core/register --require ./test/setup.js",
@@ -41,7 +42,10 @@
     "babel-eslint": "^3.1.14",
     "babel-loader": "^5.1.4",
     "babel-plugin-react-transform": "^1.1.0",
+    "body-parser": "^1.14.2",
     "css-loader": "^0.23.0",
+    "ejs": "^2.3.4",
+    "es6-promise": "^3.0.2",
     "eslint": "^0.22.1",
     "eslint-loader": "^0.12.0",
     "eslint-plugin-react": "^2.7.1",
