--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
   },
   "dependencies": {
     "classnames": "^2.1.2",
+    "history": "^1.13.1",
+    "immutable": "^3.7.6",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-redux": "^4.0.0",
-    "redux": "^3.0.0",
-    "history": "^1.13.1",
     "react-router": "1.0.3",
-    "redux-simple-router": "0.0.10",
+    "redux": "^3.0.0",
     "redux-logger": "^2.0.3",
+    "redux-simple-router": "0.0.10",
     "redux-thunk": "^1.0.0"
   },
   "devDependencies": {
