--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "redux": "^3.0.0",
     "redux-logger": "^2.0.3",
     "redux-simple-router": "0.0.10",
-    "redux-thunk": "^1.0.0"
+    "redux-thunk": "^1.0.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.1.0",
