--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
   "dependencies": {
     "classnames": "^2.1.2",
     "history": "^1.13.1",
+    "humps": "^1.0.0",
     "immutable": "^3.7.6",
+    "lodash": "^3.10.0",
+    "normalizr": "^2.0.0",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-redux": "^4.0.0",
